New redaction files

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="page-header">
       <div class="container">
-        Контакты в шапке
+        Контакты: позвонить по телефону лично мне
       </div>
     </header>
 
