--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Неопознанный Енот</h1>
+        <h1 class="heading">Толя! Делай курсы!</h1>
+        <img src="https://www.meme-arsenal.com/memes/0912c6219b5047db566a189d5233da6e.jpg">
         <p>Junior верстальщик</p>
       </div>
     </section>
