--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="hero-image">
       <div class="container">
         <h1 class="heading">Толя! Делай курсы!</h1>
-        <img src="https://www.meme-arsenal.com/memes/0912c6219b5047db566a189d5233da6e.jpg">
+        <img src="img/tbm.jpg">
         <p>Junior верстальщик</p>
       </div>
     </section>
