--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <header class="page-header">
       <div class="container">
-        Контакты: позвонить по телефону лично мне
+        <a class="header-email" href="mailto:MblJlKOshurika@gmail.com">MblJlKOshurika@gmail.com</a>
+        <a class="header-phone" href="tel:+79876543210">+7 987 654 32 10</a>
       </div>
     </header>
 
@@ -27,6 +28,10 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="files/user.jpg"  width="100%" height="auto"
+               alt="Фотография меня">
+        </figure>
         <h3>Пара слов о себе</h3>
         <p>Текст с парой слов о себе.</p>
         <h3>Чем могу быть полезен</h3>
@@ -37,9 +42,15 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
-
+          <figure class="project-image">
+            <img src="files/project.jpg"  width="928"
+                 alt="Cайт магазина товаров для дома">
+          </figure>
         <h3>Магазин товаров для дома</h3>
         <p>Мой первый сайт.</p>
+          <a class="button"
+             href="source/project-gloevk/index.html">Открыть страницу</a>
+       
 
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
@@ -48,7 +59,8 @@
 
     <footer class="page-footer">
       <div class="container">
-        Контакты в подвале
+        <a class="footer-email" href="mailto:MblJlKOshurika@gmail.com">MblJlKOshurika@gmail.com</a>
+        <a class="footer-phone" href="tel:+79876543210">+7 987 654 32 10</a>
       </div>
     </footer>
 
