--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
         <figure class="user-image">
-          <img src="files/user.jpg"  width="100%" height="auto"
+          <img src="files/user.JPG"  width="100%" height="auto"
                alt="Фотография меня">
         </figure>
         <h3>Пара слов о себе</h3>
