--- a/index.html
+++ b/index.html
@@ -29,13 +29,27 @@
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
         <figure class="user-image">
-          <img src="files/user.JPG"  width="100%" height="auto"
+          <img src="files/user.jpg"  width="100%" height="auto"
                alt="Фотография меня">
         </figure>
-        <h3>Пара слов о себе</h3>
-        <p>Текст с парой слов о себе.</p>
-        <h3>Чем могу быть полезен</h3>
-        <p>Текст о том, чем могу быть полезен.</p>
+        <div>
+          <h3>Пара слов о себе</h3>
+          <p>Текст с парой слов о себе.</p>
+        </div>
+        <div>
+          <h3>Чем могу быть полезен</h3>
+          <p>Текст о том, чем могу быть полезен.</p>
+        </div>
+        <div class="skills">
+          <h3>Мои навыки</h3>
+          <dl class="skills-list">
+            <dt class="skill-html">HTML</dt>
+            <dd class="level"><div style="width: 60%">60%</div></dd>
+            <dt class="skill-css">CSS</dt>
+            <dd class="level"><div style="width: 40%">40%</div></dd>
+
+          </dl>
+        </div>
       </div>
     </section>
 
@@ -50,7 +64,7 @@
         <p>Мой первый сайт.</p>
           <a class="button"
              href="source/project-gloevk/index.html">Открыть страницу</a>
-       
+
 
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
