--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Толя! Делай курсы!</h1>
+        <h1 class="heading">Portfolio page</h1>
         
         <p>Junior верстальщик</p>
       </div>
